<resources>
    <string name="app_name">TestHiMandarin</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Settings</string>
    <string name="title_lesson">Lesson</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_activity_settings">Settings</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="username">Username :</string>
    <string name="gender">Gender :</string>
    <string name="email">Email :</string>
    <string name="contact">Contact no :</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="lesson1">LESSON 1: PING YIN</string>
    <string name="lesson2">LESSON 2: STROKES</string>
    <string name="lesson3">LESSON 3: RADICALS</string>
    <string name="lesson4">LESSON 4: VOCABULARY</string>
    <string name="quiz1">QUIZ 1: DRAG AND DROP</string>
    <string name="quiz2">QUIZ 2: MIX AND MATCH</string>
    <string name="feedback">FEED BACK</string>
    <string name="guildline">GUILDLINE</string>
    <string name="about_us">ABOUT US</string>
    <string name="background_music">Background Music</string>
</resources>
